--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,7 +1,7 @@
 /* For Desktop */
 :root {
     --default-font-family: 'Courier New', Courier, monospace;
-    --default-background-color: slategray;
+    --default-background-color: rgb(70, 75, 80);
     --default-border-radius: 5px;
 }
 
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-flow: column nowrap;
     gap: 15px;
+    background-color: whitesmoke;
 }
 
 h1 {
@@ -31,7 +32,8 @@ nav {
 }
 
 /* Link formatting */
-a{
+a {
+    all: unset;
     text-decoration: none;
     font-family: var(--default-font-family);
     padding: 1px;
@@ -40,6 +42,7 @@ a{
 
 a:hover {
     color: white;
+    cursor: pointer;
     background-color: var(--default-background-color);
     border-radius: 3px;
 }
@@ -63,6 +66,8 @@ main section{
     display: flex;
     flex-flow: wrap;
     justify-content: space-around;
+    justify-content: flex-end;
+    padding: 5px;
 }
 
 .section-title{
@@ -72,71 +77,78 @@ main section{
     background-color: var(--default-background-color);
     border-top-left-radius: var(--default-border-radius);
     border-bottom-left-radius: var(--default-border-radius);
-    color: white;
-    -webkit-text-stroke: 0.3px black;
+    
 }
 
 .section-title h2{
-    padding: 10px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: x-large;
+    padding: 25px;
     font-weight: bolder;
+    color: white;
+    -webkit-text-stroke: 1px black;
+}
+
+#about-me-title{
+    background-image: url(../images/Headshot\ High\ Resolution.jpg);
+    background-position: center;
+    background-size: cover;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 15px;
 }
 
 #about-me{
-    background-image: url(../images/Headshot\ High\ Resolution.jpg);
-    background-color: var(--default-background-color);
-    background-position: center;
+    display: flex;
+    justify-content: space-around;
+    
+
+    /* background image approach */
+    /* background-image: url(../images/Headshot\ High\ Resolution.jpg);
+    background-position: top;
     background-size: cover;
-    height: 150px;
-    display: inline;
-    text-align: center;
-    vertical-align: text-bottom;
-
+    height: 400px; */
 }
 
-#about-me p{
-    color: white;
-    font-weight: bold;
-    font-family: var(--default-font-family);
-}
 
-#professional-headshot{
-    border-radius: 15px;
-    background-color: var(--default-background-color);
-    opacity: 50%;
-}
 
 .content-card {
     display: flex;
     flex-flow: wrap;
     border: solid 1px black;
     border-radius: var(--default-border-radius);
+    margin: 5px;
+    width: 95%;
 }
 
 .content-card:hover {
     background-color: var(--default-background-color);
-    cursor: grab;
+    cursor: pointer;
 }
 
 .content-card h3{
     padding: 10px;
 }
 
-footer {
+footer{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    text-align: center;
+    gap: 5px;
+}
+
+footer div{
     position: sticky;
     bottom: 0px;
     width: 80%;
     margin: auto;
     text-align: center;
-    background-color: white;
-    padding: 15px;
     font-size: small;
 
     display: flex;
-    flex-flow: wrap;
+    flex-flow: wrap;    
     justify-content: space-around;
-    align-items: center;
-    
 }
 
 
