--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,5 +1,3 @@
-/* For Desktop */
-
 /* Creating variables to manage color scheme theme */
 :root {
     --default-font-family: 'Courier New', Courier, monospace;
@@ -14,6 +12,204 @@
     margin: 0;
 }
 
+
+/* For Mobile */
+body {
+    margin: 2%;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 15px;
+    background-color: var(--page-background-color);
+}
+
+/* formatting all headers */
+h1 {
+    font-size: x-large;
+    font-family: var(--default-font-family);
+    text-align: center;
+    padding-bottom: 15px;
+    text-decoration: underline;
+}
+
+.section-title h2{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: large;
+    padding: 5px;
+    font-weight: bolder;
+    color: white;
+    -webkit-text-stroke: 1px black;
+}
+
+.content-card h3{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: large;
+    padding: 10px;
+}
+
+/* formatting the header (containing the main heading and the navbar) */
+body header{
+    position: sticky;
+    top: 0;
+    background-color: var(--page-background-color);
+    border-bottom: solid black 1px;
+    padding: 15px;
+}
+
+/* formatting the navbar */
+nav {
+    width: 50%;
+    margin: auto;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-around;
+}
+
+/* Link formatting */
+a {
+    text-decoration: none;
+    font-family: var(--default-font-family);
+    padding: 1px;
+    color: black;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+a:hover {
+    color: white;
+    cursor: pointer;
+    background-color: var(--default-background-color);
+    border-radius: 3px;
+
+}
+
+/* formatting the main section */
+main {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 10px;
+}
+
+main>section{
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-around;
+    border: solid var(--default-background-color) 1px;
+    border-top-right-radius: var(--default-border-radius);
+
+}
+
+/* formatting sections withing the main sections */
+.section-section{
+    border-left: solid 5px black;
+    width: 95%;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+}
+
+#section-section-section{
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: wrap;
+}
+
+.section-title{
+    width: 95%;
+    /* padding to offset the width difference created by the 5px border for the main-section */
+    padding: 2.5px;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--default-background-color);
+    border-top-left-radius: var(--default-border-radius);
+    border-bottom-left-radius: var(--default-border-radius);
+    
+}
+
+
+
+#about-me-title{
+    background-image: url(../images/Headshot\ High\ Resolution.jpg);
+    background-position: center;
+    background-size: cover;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+#about-me{
+    display: inline-block;
+    font-family: 'Courier New', Courier, monospace;
+
+    /* background image approach */
+    /* background-image: url(../images/Headshot\ High\ Resolution.jpg);
+    background-position: top;
+    background-size: cover;
+    height: 400px; */
+}
+
+#about-me p{
+    padding-left: 4%;
+}
+
+#about-me ul{
+    text-indent: 5%;
+    list-style-position: inside;
+}
+
+#first-project{
+    height: var(--card-height);
+    width: 90%;
+}
+
+.content-card {
+    display: flex;
+    flex-flow: wrap;
+    border: solid 1px black;
+    border-radius: var(--default-border-radius);
+    width: 40%;
+    padding: 5px;
+    height: calc(var(--card-height)/2);
+    margin: 2%;
+}
+
+.content-card:hover {
+    background-color: var(--default-background-color);
+    cursor: pointer;
+    color: white;
+}
+
+
+footer{
+    position: sticky;
+    bottom: 0px;
+    width: 100%;
+    padding-top: 5px;
+    padding: 5px;
+    height: 25px;
+    
+    align-items: center;
+    font-size: smaller;
+    background: var(--page-background-color);
+
+    border-top: solid black 1px;
+
+}
+
+footer div{
+    display: flex;
+    width: 50%;
+    margin: auto;
+    justify-content: space-around;
+}
+
+
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+
+}
+
+@media only screen and (min-width: 768px) {
+    /* For Desktop */
 body {
     margin: 2%;
     display: flex;
@@ -62,8 +258,6 @@ nav {
     display: flex;
     flex-flow: wrap;
     justify-content: space-around;
-    position: sticky;
-    top: 0px;
 }
 
 /* Link formatting */
@@ -203,13 +397,4 @@ footer div{
     margin: auto;
     justify-content: space-around;
 }
-
-
-@media only screen and (min-width: 600px) {
-    /* For tablets: */
-
-}
-
-@media only screen and (min-width: 768px) {
-    /* For Desktop */
 }
