--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8,65 +8,13 @@
     --debugging-border-color: none;
 }
 
-/* creating some parameters for the webpage as a whole */
+/* B E G I N    M O B I L E   F O R M A T T I N G */
+
+/* General formatting */
 *{
-    margin: 0;
+    font-family: var(--default-font-family); /* Default font */
 }
 
-
-/* For Mobile */
-body {
-    margin: 2%;
-    margin-top: 0;
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 15px;
-    background-color: var(--page-background-color);
-}
-
-/* formatting all headers */
-h1 {
-    font-size: x-large;
-    font-family: var(--default-font-family);
-    text-align: center;
-    padding-bottom: 10px;
-    text-decoration: underline;
-}
-
-.section-title h2{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: xx-large;
-    padding: 5px;
-    font-weight: 900;
-    color: white;
-    -webkit-text-stroke: 1px black;
-}
-
-.content-card h3{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: large;
-    padding: 10px;
-}
-
-/* formatting the header (containing the main heading and the navbar) */
-body header{
-    position: sticky;
-    top: 0;
-    background-color: var(--page-background-color);
-    border-bottom: solid black 1px;
-    padding: 15px;
-}
-
-/* formatting the navbar */
-nav {
-    width: 75%;
-    margin: auto;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-around;
-}
-
-/* Link formatting */
 a {
     text-decoration: none;
     font-family: var(--default-font-family);
@@ -83,319 +31,295 @@ a:hover {
     border-radius: 3px;
 
 }
-
-/* formatting the main section */
-main {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 10px;
-    margin-left: 8%;
-    margin-right: 8%;
-}
-
-main>section{
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-around;
-    border: solid var(--default-background-color) 1px;
-    border-top-right-radius: var(--default-border-radius);
-
-}
-
-/* formatting sections withing the main sections */
-.section-section{
-    border-left: solid 5px black;
-    width: 95%;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: center;
-}
-
-#section-section-section{
-    width: 95%;
-    display: flex;
-    justify-content: space-between;
-    flex-flow: wrap;
-}
-
-.section-title{
-    width: 95%;
-    /* padding to offset the width difference created by the 5px border for the main-section */
-    padding: 2.5px;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--default-background-color);
-    border-top-left-radius: var(--default-border-radius);
-    border-bottom-left-radius: var(--default-border-radius);
-    
-}
+/* End general formatting */
 
 
-
-#about-me-title{
-    background-image: url(../images/Headshot\ High\ Resolution.jpg);
-    background-position: center;
-    background-size: cover;
-    justify-content: center;
-    align-items: flex-end;
-}
-
-#about-me{
-    font-family: 'Courier New', Courier, monospace;
-    text-align: justify;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-}
-
-#about-me article{
-    padding: 3%;
-    width: 85%;
-    margin-left: 5%;
-}
-
-
-article p{
-    text-indent: 5%;
-    color: red;
-    list-style-position: inside;
-}
-
-article ul ul{
-    text-indent: 20%;
-    list-style-position: inside;
-}
-
-#first-project{
-    height: var(--card-height);
-    width: 95%;
-}
-
-.content-card {
-    display: flex;
-    flex-flow: wrap;
-    /* border: solid 1px black; */
-    border-radius: var(--default-border-radius);
-    width: 40%;
-    padding: 5px;
-    height: calc(var(--card-height)/2);
-    margin: 2%;
-}
-
-.content-card:hover {
-    background-color: var(--default-background-color);
-    cursor: pointer;
-    color: white;
-}
-
-
-footer{
-    position: sticky;
-    bottom: 0px;
-    width: 100%;
-    padding-top: 5px;
-    padding: 5px;
-    height: 25px;
-    
-    align-items: center;
-    font-size: smaller;
-    background: var(--page-background-color);
-
-    border-top: solid black 1px;
-
-}
-
-footer div{
-    display: flex;
-    width: 50%;
-    margin: auto;
-    justify-content: space-around;
-}
-
-
-@media only screen and (min-width: 600px) {
-    /* For tablets: */
-
-}
-
-@media only screen and (min-width: 768px) {
-    /* For Desktop */
-body {
-    margin: 2%;
-    margin-top: 0;
-    margin-bottom: 0;
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 15px;
+body { /* "body" is a container for the header, main, and footer elements */
+    margin-left: 2%;
+    margin-right: 2%;
+    display: flex; 
+    flex-flow: column nowrap; /* want to keep the header, main, and footer stacked without wrapping */
+    gap: 15px; /* gap between header and main, and main and footer */
     background-color: var(--page-background-color);
-    border: solid var(--debugging-border-color) 1px;
-
 }
 
-/* formatting all headers */
-h1 {
-    font-size: xx-large;
-    font-family: var(--default-font-family);
-    text-align: center;
-    padding-bottom: 15px;
-    text-decoration: underline;
-}
-
-.content-card h3{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: x-large;
-    padding: 10px;
-}
-
-/* formatting the header (containing the main heading and the navbar) */
 body header{
     position: sticky;
     top: 0;
-    background-color: var(--page-background-color);
     border-bottom: solid black 1px;
-    padding: 15px;
+    padding: 10px;
+    padding-top: 20px;
+    background-color: var(--page-background-color); /* keeps the sticky header from being transparent */
 }
 
-/* formatting the navbar */
-nav {
-    width: 50%;
+body header nav {
+    width: 90%;
     margin: auto;
     display: flex;
-    flex-flow: wrap;
-    justify-content: space-around;
+    flex-flow: nowrap;
+    font-size: medium;
+    justify-content: space-between;
 }
 
-/* Link formatting */
-a {
-    text-decoration: none;
+body header h1 {
+    font-size: xx-large;
     font-family: var(--default-font-family);
-    padding: 1px;
-    color: black;
-    padding-left: 15px;
-    padding-right: 15px;
+    text-align: center;
+    padding-bottom: 10px;
+    text-decoration: underline;
 }
 
-a:hover {
-    color: white;
-    cursor: pointer;
-    background-color: var(--default-background-color);
-    border-radius: 3px;
-
+body header #large-page-title{ /* there are two title elements toggled by a media query to handle size constraints for smaller screens */
+    display: none;
 }
 
-/* formatting the main section */
-main {
+body main{ /* main is a container for the "About Me" and "My Work" sections */
     display: flex;
     flex-flow: row wrap;
-    gap: 15px;
-    row-gap: 20px;
+    justify-content: center;
+    gap: 30px; /* gap between section title and section content when */
+    margin-left: 6%;
+    margin-right: 6%;
 }
 
-main>section{
+body main section{
+    text-align: center;
     display: flex;
     flex-flow: wrap;
-    justify-content: space-around;
+    gap: 8px; /* gap between the section header and section content */
+}
+
+body main>section>div{
     border: solid var(--default-background-color) 1px;
-    border-top-right-radius: var(--default-border-radius);
-
 }
 
-/* formatting sections withing the main sections */
-.section-section{
-    border-left: solid 5px black;
-    width: 75%;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-around;
-    padding-top: 20px;
-}
-
-/* #section-section-section{
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    flex-flow: wrap;
-
-} */
-
-.section-title{
-    width: 20%;
-    align-items: center;
-    justify-content: flex-end;
+body main .section-title{
     background-color: var(--default-background-color);
-    border-top-left-radius: var(--default-border-radius);
-    border-bottom-left-radius: var(--default-border-radius);
-    
+    border-radius: var(--default-border-radius);
+    border-bottom-right-radius: 0;
+    width: 100%;
 }
 
-.section-title h2{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+body main .section-title h2{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: xx-large;
-    padding: 50px;
+    padding: 5px;
     font-weight: 900;
     color: white;
     -webkit-text-stroke: 1px black;
 }
 
+body main .section{
+    border-left: solid 5px black;
+}
+
 #about-me-title{
     background-image: url(../images/Headshot\ High\ Resolution.jpg);
     background-position: center;
     background-size: cover;
-    justify-content: center;
-    align-items: flex-end;
 }
 
 #about-me{
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 0;
-    margin: 0;
-    font-family: 'Courier New', Courier, monospace;
+    background-color: white;
 }
 
-#first-project{
-    height: calc(var(--card-height)*2);
-    width: 95%;
+#about-me *{
+    padding-left: 3%;
+    padding-right: 3%;
+    list-style-position: inside;
 }
 
-.content-card {
-    display: flex;
-    flex-flow: wrap;
-    /* border: solid 1px black; */
-    border-radius: var(--default-border-radius);
-    width:43%;
-    padding: 5px;
-    height: var(--card-height);
-    background-color: gray;
+#about-me article{
+    padding: 3%;
+    text-align: left;
 }
 
-.content-card:hover {
+#about-me article ul{
+    font-size: small;
+}
+
+.project-card{
+    border-left: solid 5px black;
+    width: 100%;
+}
+
+.project-card:hover {
     background-color: var(--default-background-color);
     cursor: pointer;
     color: white;
 }
 
+.project-card h3{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: large;
+    font-weight: 800;
+    padding: 10px;
+}
+
+.github-link{
+    width: 50%;
+    margin: auto;
+    margin-bottom: 5px;
+}
 
 footer{
     position: sticky;
     bottom: 0px;
-    width: 100%;
-    padding: 5px;
-    padding-top: 15px;
-
-    align-items: center;
-    font-size: smaller;
     background: var(--page-background-color);
-
-    border: var(--debugging-border-color) solid 1px;
     border-top: solid black 1px;
+    padding: 10px;
 }
 
-footer div{
-    display: flex;
-    width: 50%;
+footer div{ /* adding a div prevents unwanted behavior when scrolling */ 
+    width: 90%;
     margin: auto;
-    justify-content: space-around;
-    border: solid var(--debugging-border-color) 1px;
+    display: flex;
+    flex-flow: nowrap;
+    justify-content: space-between;
 }
+/* E N D   M O B I L E   F O R M A T T I N G */
+
+
+/* T A B L E T   F O R M A T T I N G */
+@media only screen and (min-width: 600px) {
+
+}
+
+
+/* D E S K T O P   F O R M A T T I N G */
+@media only screen and (min-width: 768px) {
+
+    /* General Formatting */
+    a {
+        text-decoration: none;
+        font-family: var(--default-font-family);
+        padding: 1px;
+        color: black;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    a:hover {
+        color: white;
+        cursor: pointer;
+        background-color: var(--default-background-color);
+        border-radius: 3px;
+    }
+    /* End General Formatting */
+
+    
+    body header{
+        position: sticky;
+        top: 0;
+        background-color: var(--page-background-color);
+        border-bottom: solid black 1px;
+        padding: 15px;
+    }
+
+    body nav {
+        width: 50%;
+        margin: auto;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: space-around;
+    }
+
+    body header h1 {
+        font-size: xx-large;
+        font-family: var(--default-font-family);
+        text-align: center;
+        padding-bottom: 15px;
+        text-decoration: underline;
+    }
+
+    #large-page-title{
+        display: block;
+    }
+
+    #small-page-title{
+        display: none;
+    }
+
+    main { /* Container for the "About Me" and "My Work" sections */
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+    }
+
+    .section-title{
+        width: 22%;
+        align-items: center;
+        justify-content: flex-end;
+        background-color: var(--default-background-color);
+        border-top-left-radius: var(--default-border-radius);
+        border-bottom-left-radius: var(--default-border-radius);
+    }
+
+    .section-title h2{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: xx-large;
+        padding: 50px;
+        font-weight: 900;
+        color: white;
+        -webkit-text-stroke: 1px black;
+    }
+
+    .section-article{
+        border-left: solid 5px black;
+        padding-left: 50px;
+        width: 60%;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: space-around;
+        border-top-right-radius: var(--default-border-radius);
+    }
+
+    /* #about-me-title{
+        background-image: url(../images/Headshot\ High\ Resolution.jpg);
+        background-position: center;
+        background-size: cover;
+        justify-content: center;
+    } */
+
+    .project-card {
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-size: x-large;
+        border-left: solid 5px black;
+        width: 60%;
+        padding-left: 50px;
+    }
+
+    .project-card:hover {
+        background-color: var(--default-background-color);
+        cursor: pointer;
+        color: white;
+    }
+
+    #first-project{
+        height: calc(var(--card-height)*2);
+        width: 95%;
+    }
+
+    footer{
+        position: sticky;
+        bottom: 0px;
+        width: 100%;
+        padding: 5px;
+        padding-top: 15px;
+
+        align-items: center;
+        font-size: smaller;
+        background: var(--page-background-color);
+
+        border: var(--debugging-border-color) solid 1px;
+        border-top: solid black 1px;
+    }
+
+    footer div{
+        display: flex;
+        width: 50%;
+        margin: auto;
+        justify-content: space-around;
+        border: solid var(--debugging-border-color) 1px;
+    }
 }
