--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,10 @@
 a {
     text-decoration: none;
     font-family: var(--default-font-family);
-    padding: 1px;
+    padding: 2px;
     color: black;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .link-wrap{ /* <a> tags used to wrap cards and such */
@@ -82,7 +82,7 @@ body main{ /* main is a container for the "About Me" and "My Work" sections */
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    gap: 50PX; /* gap between "About Me" and "My Work" sections */
+    gap: 60PX; /* gap between "About Me" and "My Work" sections */
     margin-left: 6%;
     margin-right: 6%;
 }
@@ -149,11 +149,10 @@ body main section div a{ /* offsetting the general link formatting above for the
 #projects{
     width: 100%;
     background-color: var(--page-background-color);
-
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-between;
-    gap: 5px;
+    justify-content: space-around;
+    gap: 500px;
     border-left: solid 5px black;
 
 }
@@ -161,10 +160,12 @@ body main section div a{ /* offsetting the general link formatting above for the
 .project-card{
     margin-top: -5px; /* I am not sure why this became necessary to offset the flex gap in #projects */
     background-color: white;
-    border: 1px black solid;
+    border: 2px black solid;
     border-left: none; 
     width: 100%;
     padding-bottom: 300px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .project-card:hover {
@@ -209,13 +210,63 @@ footer div{ /* adding a div prevents unwanted behavior when scrolling */
 #traks{
     /* border: 1px solid black; */
     background-image: url(../images/traks\ screenshot.png);
-    background-position: left;
     background-size: cover;
+    background-position: left;
+    box-shadow:inset 0 0 600px 75px rgba(0,0,0,1);
 }
 
 #traks *{
+        color: white;
+}
+
+#techblog{
+    border: 1px solid black;
+    background-image: url(../images/Tech\ Blog\ Screenshot.png);
+    background-position: right;
+    background-size: cover;
+    box-shadow:inset 0 0 600px 75px rgba(0,0,0,1);
+}
+
+#techblog * {
     color: white;
 }
+
+#weather{
+    border: 1px solid black;
+    background-image: url(../images/Weather\ App\ Screenshot.png);
+    background-position: right;
+    background-size: cover;
+    box-shadow:inset 0 0 600px 75px rgba(0,0,0,1);
+}
+
+#weather *{
+    color: white;
+}
+
+#pokedex {
+    border: 1px solid black;
+    background-image: url(../images/Pokedex\ Screenshot.png);
+    background-position: right;
+    background-size: cover;
+    box-shadow:inset 0 0 600px 75px rgba(0,0,0,1);
+}
+
+#pokedex *{
+    color: white;
+}
+
+#password {
+    border: 1px solid black;
+    background-image: url(../images/password\ generator\ screenshot.png);
+    background-position: right;
+    background-size: cover;
+    box-shadow:inset 0 0 600px 75px rgba(0,0,0,1);
+}
+
+#password *{
+    color: white;
+}
+
 /* E N D   M O B I L E   F O R M A T T I N G */
 
 
