--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ body header{
     padding: 15px;
     padding-top: 20px;
     background-color: var(--page-background-color); /* keeps the sticky header from being transparent */
+    z-index: 2; /* Trying to keep the header on top of the sticky section titles */
 }
 
 body header nav {
@@ -100,6 +101,16 @@ body main .section-title{
     border-radius: var(--default-border-radius);
     border-bottom-right-radius: 0;
     width: 100%;
+}
+
+.inner-title{
+    margin-top: 60%;
+    border-radius: 15px;
+    padding: 10px;
+    position: sticky;
+    top: 60%;
+    bottom: 20%;
+    z-index: 1;
 }
 
 body main .section-title h2{
@@ -196,6 +207,7 @@ footer{
     background: var(--page-background-color);
     border-top: solid black 1px;
     padding: 10px;
+    z-index: 2;
 }
 
 footer div{ /* adding a div prevents unwanted behavior when scrolling */ 
@@ -210,7 +222,7 @@ footer div{ /* adding a div prevents unwanted behavior when scrolling */
     /* border: 1px solid black; */
     background-image: url(../images/traks\ screenshot.png);
     background-size: cover;
-    background-position: top;
+    background-position: center;
     box-shadow:inset 0 0 600px 75px rgba(0,0,0,1);
 }
 
@@ -315,9 +327,6 @@ footer div{ /* adding a div prevents unwanted behavior when scrolling */
         border-radius: var(--default-border-radius);
         border-bottom-right-radius: 0;
         width: 25%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
         padding-bottom: 150px;
         font-size: 300%;
     }
