--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,8 @@ body main .section-title{
     border-radius: var(--default-border-radius);
     border-bottom-right-radius: 0;
     width: 100%;
+    padding-top: 15px;
+    padding-bottom: 10px;
 }
 
 body main .section-title h2{
@@ -156,11 +158,10 @@ body main section div a{ /* offsetting the general link formatting above for the
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
-    gap: 30px;
 }
 
 .project-card{
-    margin-top: -5px; /* I am not sure why this became necessary to offset the flex gap in #projects */
+    margin-top: 5px; /* I am not sure why this became necessary to offset the flex gap in #projects */
     background-color: white;
     border: 2px black solid;
     border-left: none; 
