--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,19 +132,37 @@ body main .section-title h2{
     border-left: solid 5px black;
 }
 
-#about-me *{
-    padding-left: 4%;
-    padding-right: 4%;
-}
-
 #about-me article{
     padding: 3%;
     text-align: left;
 }
 
+#about-me h3{
+    font-weight: 600;
+    font-size: large;
+}
+
 #about-me article ul{
     font-size: small;
     margin-left: 5%;
+}
+
+.about-me-sub {
+    border: dashed black 1px;
+    border-radius: 2px;
+    padding: 20px;
+    margin: 20px;
+}
+
+#lists {
+    display: flex;
+    gap: 15px;
+}
+
+#work-title{
+    background-image: url(../images/background.jpeg);
+    background-size: cover;
+    background-repeat: repeat-y;
 }
 
 body main section div a{ /* offsetting the general link formatting above for the project cards */
@@ -222,6 +240,18 @@ footer div{ /* adding a div prevents unwanted behavior when scrolling */
         color: white;
 }
 
+#snodes{
+    border: 1px solid black;
+    background-image: url(../images/Snodes\ Screenshot.png);
+    background-position: right;
+    background-size: cover;
+    box-shadow:inset 0 0 600px 75px rgba(0,0,0,1);
+}
+
+#snodes *{
+    color: white;
+}
+
 #techblog{
     border: 1px solid black;
     background-image: url(../images/Tech\ Blog\ Screenshot.png);
@@ -288,10 +318,6 @@ footer div{ /* adding a div prevents unwanted behavior when scrolling */
         font-size: 150%;
     }
 
-    #large-page-title h2{
-        display: none;
-    }
-
     #projects{
         gap: 20px;
         border-left: solid 5px black;
@@ -345,15 +371,9 @@ footer div{ /* adding a div prevents unwanted behavior when scrolling */
     }
 
     #large-page-title {
-        display: flex;
+        display: block;
         flex-flow: column wrap;
         align-items: center;
-    }
-
-    #large-page-title h2{
-        display: block;
-        font-size: xx-large;
-        font-style: italic;
     }
 
     .inner-title{
@@ -385,14 +405,7 @@ footer div{ /* adding a div prevents unwanted behavior when scrolling */
 
 /* Formatting for Extra Large Screen */
 @media only screen and (min-width: 1200px) { 
-    
-    #large-page-title{
-        display: flex;
-        font-size: 300%;
-        /* flex-wrap: row nowrap; */
-        /* gap: 20px; */
-    }
-    
+
     .section-title{
         font-size: 500%;
     }
